--- a/admin.html
+++ b/admin.html
@@ -4,18 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/admin.css" />
-    <link rel="stylesheet" href="css/style.css" />
     <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <meta
-    name="description"
-    content="Painel de administração da barbearia para gerenciar agendamentos e visualizar faturamento."
+      name="description"
+      content="Painel de administração da barbearia para gerenciar agendamentos e visualizar faturamento."
     />
     <meta
-    name="keywords"
-    content="barbearia, agendamentos, administração, painel, faturamento, serviços"
+      name="keywords"
+      content="barbearia, agendamentos, administração, painel, faturamento, serviços"
     />
     <meta name="author" content="Seu Nome" />
     <meta name="robots" content="index, follow" />
@@ -26,48 +25,44 @@
     <title>Dashboard - Barbearia</title>
   </head>
   <body>
-      <header class="cabecalho">
+    <header class="cabecalho">
       <div class="logo">Barbearia</div>
-      <button class="menu-toggle" id="menu-toggle" aria-label="Abrir menu">
-        &#9776;
-      </button>
+      <button class="menu-toggle" id="menu-toggle">&#9776;</button>
       <nav class="menu" id="menu">
         <a href="#">Início</a>
         <a href="#">Serviços</a>
-        <a href="#">Agendamento</a>
-        <a href="./arquivos.html">Arquivados</a>
+        <a href="./arquivos.html">Agendamento arquivados</a>
       </nav>
     </header>
+
     <main>
       <section>
         <h1>Agendamento de Serviços</h1>
         <form id="form-agendamento">
-        <input type="text" id="nome" placeholder="Seu nome" required />
-        <input type="date" id="data" required />
-        <select id="hora" required></select>
-        <select id="servico" required>
-          <option value="">Tipo de serviço</option>
-          <option value="Corte" selected>Corte</option>
-          <!-- já selecionado -->
-          <option value="Barba">Barba</option>
-          <option value="Corte + Barba">Corte + Barba</option>
-          <option value="Corte + Barba + Sobrancelha">
-            Corte + Barba + Sobrancelha
-          </option>
-          <option value="Sobrancelha">Sobrancelha</option>
-        </select>
+          <input type="text" id="nome" placeholder="Seu nome" required />
+          <input type="date" id="data" required />
+          <select id="hora" required></select>
+          <select id="servico" required>
+            <option value="">Tipo de serviço</option>
+            <option value="Corte" selected>Corte</option>
+            <option value="Barba">Barba</option>
+            <option value="Corte + Barba">Corte + Barba</option>
+            <option value="Corte + Barba + Sobrancelha">
+              Corte + Barba + Sobrancelha
+            </option>
+            <option value="Sobrancelha">Sobrancelha</option>
+          </select>
+          <select id="pagamento" required>
+            <option value="">Forma de pagamento</option>
+            <option value="Pix">Pix</option>
+            <option value="Débito">Débito</option>
+            <option value="Crédito">Crédito</option>
+            <option value="Dinheiro">Dinheiro</option>
+          </select>
+          <div id="totalAPagar">Valor total: <strong>R$ 0,00</strong></div>
 
-        <select id="pagamento" required>
-          <option value="">Forma de pagamento</option>
-          <option value="Pix">Pix</option>
-          <option value="Débito">Débito</option>
-          <option value="Crédito">Crédito</option>
-          <option value="Dinheiro">Dinheiro</option>
-        </select>
-        <div id="totalAPagar">Valor total: <strong>R$ 0,00</strong></div>
-
-        <button type="submit">Agendar</button>
-      </form>
+          <button type="submit">Agendar</button>
+        </form>
       </section>
       <h1>Painel do Administrador</h1>
 
@@ -82,6 +77,7 @@
       </section>
 
       <section>
+        <h2>Agendamentos Pendentes</h2>
         <div id="lista-agendamentos"></div>
       </section>
       <section>
@@ -102,7 +98,48 @@
         <div id="agendamentos-finalizados"></div>
       </section>
     </main>
+<footer class="rodape">
+  <div class="footer-container">
+    <div class="footer-logo">
+      <h2>Barbearia</h2>
+      <p>Estilo, qualidade e atendimento profissional.</p>
+    </div>
+
+    <div class="footer-links">
+      <h3>Links Rápidos</h3>
+      <ul>
+        <li><a href="#">Início</a></li>
+        <li><a href="#">Serviços</a></li>
+        <li><a href="#">Agendamento</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-social">
+      <h3>Redes Sociais</h3>
+      <div class="icons">
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" /></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram" /></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" /></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 Barbearia. Todos os direitos reservados.</p>
+  </div>
+</footer>
 
     <script type="module" src="js/admin.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const toggle = document.getElementById("menu-toggle");
+        const menu = document.getElementById("menu");
+
+        toggle.addEventListener("click", () => {
+          menu.classList.toggle("ativo");
+        });
+      });
+    </script>
   </body>
 </html>
