--- a/arquivos.html
+++ b/arquivos.html
@@ -32,5 +32,36 @@
         <div id="listaArquivados"></div>
       </section>
     </main>
+    <footer class="rodape">
+  <div class="footer-container">
+    <div class="footer-logo">
+      <h2>Barbearia</h2>
+      <p>Estilo, qualidade e atendimento profissional.</p>
+    </div>
+
+    <div class="footer-links">
+      <h3>Links Rápidos</h3>
+      <ul>
+        <li><a href="#">Início</a></li>
+        <li><a href="#">Serviços</a></li>
+        <li><a href="#">Agendamento</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-social">
+      <h3>Redes Sociais</h3>
+      <div class="icons">
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" /></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram" /></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" /></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 Barbearia. Todos os direitos reservados.</p>
+  </div>
+</footer>
   </body>
 </html>
