atualização no arquivos

--- a/arquivos.html
+++ b/arquivos.html
@@ -24,7 +24,7 @@
       <section>
         <div class="container">
           <ul>
-            <li><a href="admin.html">Painel de Administração</a></li>
+            <li><a href="admin.html">Voltar</a></li>
           </ul>
           <h1>Agendamentos Arquivados</h1>
         </div>
