--- a/arquivos.html
+++ b/arquivos.html
@@ -6,20 +6,11 @@
     <link rel="stylesheet" href="css/arquivo.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
-    <script
-      src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"
-      type="module"
-    ></script>
-    <script
-      src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"
-      type="module"
-    ></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"type="module"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js" type="module" ></script>
     <script type="module" src="js/arquivo.js"></script>
   </head>
   <body>
-    <header>
-      <nav></nav>
-    </header>
     <main>
       <section>
         <div class="container">
@@ -32,7 +23,7 @@
         <div id="listaArquivados"></div>
       </section>
     </main>
-    <footer class="rodape">
+   <footer class="rodape">
   <div class="footer-container">
     <div class="footer-logo">
       <h2>Barbearia</h2>
@@ -62,6 +53,6 @@
   <div class="footer-bottom">
     <p>&copy; 2025 Barbearia. Todos os direitos reservados.</p>
   </div>
-</footer>
+   </footer>
   </body>
 </html>
