--- a/index.html
+++ b/index.html
@@ -24,13 +24,10 @@
   
 <section class="video-corte">
    <h1>Barbearia Rei do Corte</h1>
-  <iframe 
-    width="100%" height="250" 
-    src="https://www.youtube.com/embed/6eW4c8tyK10?start=0&end=10&autoplay=1&mute=1&loop=1&playlist=6eW4c8tyK10" 
-    frameborder="0" 
-    allow="autoplay; encrypted-media" 
-    allowfullscreen>
-  </iframe>
+ <video width="100%" height="250" controls autoplay muted loop>
+  <source src="./assets/video.mp4" type="video/mp4">
+  Seu navegador não suporta vídeos HTML5.
+</video>
 </section>
 
 
