--- a/admin.html
+++ b/admin.html
@@ -29,26 +29,42 @@
       <button class="menu-toggle" id="menu-toggle">&#9776;</button>
       <nav class="menu" id="menu">
         <a href="#">Início</a>
-        <a href="#">Serviços</a>
-        <a href="./arquivos.html">Agendamento arquivados</a>
+        <a href="#" id="abrirCadastro">Cadastro de Barbeiro</a>
+        <a href="#" id="abrirLista">Barbeiros Cadastrados</a>
+        <a href="arquivos.html">Agendamentos Arquivados</a>
       </nav>
     </header>
 
     <main>
-      <section>
-        <form id="formBarbeiro">
-  <input type="text" id="nomeBarbeiro" placeholder="Nome do barbeiro" required />
-  <button type="submit">Cadastrar</button>
-  <p id="msgBarbeiro"></p>
-</form>
-    <section id="agendamentos-por-barbeiro">
-  <h2>Agendamentos por Barbeiro</h2>
-  <div id="barbeiros-container"></div>
-</section>
+  <section>
+       <!-- Modal Cadastro -->
+  <div class="modal" id="modalCadastro">
+    <div class="modal-content">
+      <span class="close" id="fecharCadastro">&times;</span>
+      <h2>Cadastro de Barbeiro</h2>
+      <form id="formBarbeiro">
+        <input type="text" id="nomeBarbeiro" placeholder="Nome do barbeiro" required />
+        <button type="submit">Cadastrar</button>
+        <p id="msgBarbeiro"></p>
+      </form>
+    </div>
+  </div>
+
+  <!-- Modal Lista -->
+  <div class="modal" id="modalLista">
+    <div class="modal-content">
+      <span class="close" id="fecharLista">&times;</span>
+      <h2>Barbeiros Cadastrados</h2>
+      <ul id="listaBarbeiros"></ul>
+    </div>
+  </div>
+  </section>
+
       <section>
         <h2>Agendamentos Pendentes</h2>
         <div id="lista-agendamentos"></div>
       </section>
+
       <section>
         <div class="grafico-container">
           <div class="grafico-top">
@@ -61,6 +77,7 @@
           <canvas id="graficoPagamento" width="200" height="300"></canvas>
         </div>
       </section>
+
       <section>
         <br />
         <h2>Agendamentos Finalizados</h2>
@@ -76,12 +93,13 @@
 
     <div class="footer-links">
       <h3>Links Rápidos</h3>
-      <ul>
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Serviços</a></li>
-        <li><a href="#">Agendamento</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
+      <div>
+      <a href="#">Início</a>
+       <a href="#">Serviços</a>
+       <a href="#">Agendamento</a>
+       <a href="#">Contato</a>
+      </div>
+       
     </div>
 
     <div class="footer-social">
