modificação no video

--- a/index.html
+++ b/index.html
@@ -25,11 +25,21 @@
     <main>
   
 <section class="video-corte">
-   <h1>Barbearia Rei do Corte</h1>
- <video width="100%" height="250" controls autoplay muted loop playsinline >
-  <source src="./assets/video.mp4" type="video/mp4">
+  <video
+  width="100%" height="250"
+  controls
+  autoplay
+  muted
+  loop
+  playsinline
+>
+  <source src="./assets/video.mp4" type="video/mp4" />
   Seu navegador não suporta vídeos HTML5.
 </video>
+  <div class="video-overlay">
+    <h1>Barbearia Rei do Corte</h1>
+    <p>Transforme seu visual com estilo e qualidade.</p>
+  </div>
 </section>
 
 <section class="mapa">
