--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="cabecalho">
-     <img class="logo" src="./assets/logo.png" alt="">
+      <img class="logo" src="./assets/logo.png" alt="" />
       <button class="menu-toggle" id="menu-toggle" aria-label="Abrir menu">
         &#9776;
       </button>
@@ -23,176 +25,314 @@
     </header>
 
     <main>
-  
-<section class="video-corte">
-  <video
-  width="100%" height="250"
-  controls
-  autoplay
-  muted
-  loop
-  playsinline
->
-  <source src="./assets/video.mp4" type="video/mp4" />
-  Seu navegador não suporta vídeos HTML5.
-</video>
-  <div class="video-overlay">
-    <h1>Barbearia Rei do Corte</h1>
-    <p>Transforme seu visual com estilo e qualidade.</p>
-  </div>
-</section>
+      <section class="video-corte">
+        <video
+          width="100%"
+          height="250"
+          controls
+          autoplay
+          muted
+          loop
+          playsinline
+        >
+          <source src="./assets/video.mp4" type="video/mp4" />
+          Seu navegador não suporta vídeos HTML5.
+        </video>
+        <div class="video-overlay">
+          <h1>Barbearia Rei do Corte</h1>
+          <p>Transforme seu visual com estilo e qualidade.</p>
+        </div>
+      </section>
 
-<section class="mapa">
-  <h2>Onde estamos</h2>
-  <p>Estamos localizados na Av. Cônego João Lima Nº 255, em frente às Lojas Nosso Lar.</p>
-  
-  <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3971.3294235402925!2d-48.21240922418688!3d-7.19219857114962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x92d9b8c6fb5f5ed3%3A0xf6b5bba40e86f210!2sBarbearia%20Estilo%20Fino!5e0!3m2!1spt-BR!2sbr!4v1720103290522!5m2!1spt-BR!2sbr"
-    width="100%" height="300" style="border:0; border-radius: 10px;"
-    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-  </iframe>
-</section>
+      <section class="mapa">
+        <h2>Onde estamos</h2>
+        <p>
+          Estamos localizados na Av. Cônego João Lima Nº 255, em frente às Lojas
+          Nosso Lar.
+        </p>
 
-<section class="profissionais">
-  <h2>Nossos Profissionais</h2>
-  <div class="cards">
-    <div class="card">
-      <img src="./assets/barbeiro.jpg" alt="João - Barbeiro" />
-      <h3>João Silva</h3>
-      <p>10 anos de experiência, especialista em fades e cortes modernos.</p>
-    </div>
-    <div class="card">
-      <img src="./assets/Barbearias.-SCA.jpg" alt="Carlos - Estilo" />
-      <h3>Carlos Rocha</h3>
-      <p>Expert em cortes Afros e barba completa.</p>
-    </div>
-  </div>
-  <div class="destaque">
-  <h2>Destaques da Barbearia</h2>
-<ul class="lista-destaque">
-  <li class="itens">Atendimento aos Clientes</li>
-  <li class="itens">Espaço diferenciado</li>
-  <li class="itens">Localização</li>
-  <li class="itens">Profissionais Qualificados</li>
-  <li class="itens">Pontualidade</li>
-  <li class="itens">Limpeza</li>
-  <li class="itens">Ambiente Climatizado</li>
-</ul>
-  <p class="texto-destaque">
-    Nossa barbearia é reconhecida por seu atendimento excepcional, ambiente
-    acolhedor e profissionais altamente qualificados. Estamos localizados no
-    coração da cidade, oferecendo serviços de alta qualidade com pontualidade e
-    limpeza impecável.
-  </div>
-</section>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3971.3294235402925!2d-48.21240922418688!3d-7.19219857114962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x92d9b8c6fb5f5ed3%3A0xf6b5bba40e86f210!2sBarbearia%20Estilo%20Fino!5e0!3m2!1spt-BR!2sbr!4v1720103290522!5m2!1spt-BR!2sbr"
+          width="100%"
+          height="300"
+          style="border: 0; border-radius: 10px"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        >
+        </iframe>
+      </section>
 
-<section id="agendamento">
-<h1>Agendamento de Serviços</h1>
-      <form id="form-agendamento">
-        <input type="text" id="nome" placeholder="Seu nome" required />
-        <input type="date" id="data" required />
+      <section class="profissionais">
+        <h2>Nossos Profissionais</h2>
+        <div class="cards">
+          <div class="card">
+            <img src="./assets/barbeiro.jpg" alt="João - Barbeiro" />
+            <h3>João Silva</h3>
+            <p>
+              10 anos de experiência, especialista em fades e cortes modernos.
+            </p>
+          </div>
+          <div class="card">
+            <img src="./assets/Barbearias.-SCA.jpg" alt="Carlos - Estilo" />
+            <h3>Carlos Rocha</h3>
+            <p>Expert em cortes Afros e barba completa.</p>
+          </div>
+        </div>
+        <div class="destaque">
+          <h2>Destaques da Barbearia</h2>
+          <ul class="lista-destaque">
+            <li class="itens">Atendimento aos Clientes</li>
+            <li class="itens">Espaço diferenciado</li>
+            <li class="itens">Localização</li>
+            <li class="itens">Profissionais Qualificados</li>
+            <li class="itens">Pontualidade</li>
+            <li class="itens">Limpeza</li>
+            <li class="itens">Ambiente Climatizado</li>
+          </ul>
+          <p class="texto-destaque">
+            Nossa barbearia é reconhecida por seu atendimento excepcional,
+            ambiente acolhedor e profissionais altamente qualificados. Estamos
+            localizados no coração da cidade, oferecendo serviços de alta
+            qualidade com pontualidade e limpeza impecável.
+          </p>
+        </div>
+      </section>
 
-        <select id="hora" required></select>
+      <section id="agendamento">
+        <h1>Agendamento de Serviços</h1>
+        <form id="form-agendamento">
+          <input type="text" id="nome" placeholder="Seu nome" required />
+          <input type="date" id="data" required />
 
-        <select id="servico" required>
-          <option value="">Tipo de serviço</option>
-          <option value="Corte" selected>Corte</option>
-          <!-- já selecionado -->
-          <option value="Barba">Barba</option>
-          <option value="Corte + Barba">Corte + Barba</option>
-          <option value="Corte + Barba + Sobrancelha">
-            Corte + Barba + Sobrancelha
-          </option>
-          <option value="Sobrancelha">Sobrancelha</option>
-        </select>
+          <select id="hora" required>
+            <option value="">Horarios disponiveis</option>
+          </select>
 
-        <select id="pagamento" required>
-          <option value="">Forma de pagamento</option>
-          <option value="Pix">Pix</option>
-          <option value="Débito">Débito</option>
-          <option value="Crédito">Crédito</option>
-          <option value="Dinheiro">Dinheiro</option>
-        </select>
-        <select id="barbeiro">
-          <option value=""></option>
-        </select>
-        <div id="totalAPagar">Valor total: <strong>R$ 0,00</strong></div>
+          <select id="servico" required>
+            <option value="">Tipo de serviço</option>
+            <option value="Corte" selected>Corte</option>
+            <!-- já selecionado -->
+            <option value="Barba">Barba</option>
+            <option value="Corte + Barba">Corte + Barba</option>
+            <option value="Corte + Barba + Sobrancelha">
+              Corte + Barba + Sobrancelha
+            </option>
+            <option value="Sobrancelha">Sobrancelha</option>
+          </select>
 
-        <button type="submit">Agendar</button>
-      </form>
-</section>
+          <select id="pagamento" required>
+            <option value="">Forma de pagamento</option>
+            <option value="Pix">Pix</option>
+            <option value="Débito">Débito</option>
+            <option value="Crédito">Crédito</option>
+            <option value="Dinheiro">Dinheiro</option>
+          </select>
+          <select id="barbeiro">
+            <option value="">Escolha o seu Barbeiro</option>
+          </select>
+          <div id="totalAPagar">Valor total: <strong>R$ 0,00</strong></div>
 
-<section class="depoimentos" id="depoimento">
-  <h2>O que dizem nossos clientes</h2>
+          <button type="submit">Agendar</button>
+        </form>
+      </section>
 
-  <div class="depoimento">
-    <p>“Melhor barbearia da cidade! Atendimento incrível e resultado impecável.”</p>
-    <strong>– Felipe Andrade</strong>
-  </div>
+      <section class="depoimentos" id="depoimento">
+        <h2>O que dizem nossos clientes</h2>
 
-  <div class="depoimento">
-    <p>“Sempre saio de lá me sentindo um rei. Os caras manjam muito!”</p>
-    <strong>– Lucas Menezes</strong>
-  </div>
+        <div class="depoimento">
+          <p>
+            “Melhor barbearia da cidade! Atendimento incrível e resultado
+            impecável.”
+          </p>
+          <strong>– Felipe Andrade</strong>
+        </div>
 
-  <div class="depoimento">
-    <p>“Ambiente top, atendimento respeitoso e corte no estilo. Recomendo demais!”</p>
-    <strong>– André Carvalho</strong>
-  </div>
+        <div class="depoimento">
+          <p>“Sempre saio de lá me sentindo um rei. Os caras manjam muito!”</p>
+          <strong>– Lucas Menezes</strong>
+        </div>
 
-  <div class="depoimento">
-    <p>“Eles respeitam o horário marcado, são rápidos e caprichosos. Nota mil!”</p>
-    <strong>– Tiago Rocha</strong>
-  </div>
+        <div class="depoimento">
+          <p>
+            “Ambiente top, atendimento respeitoso e corte no estilo. Recomendo
+            demais!”
+          </p>
+          <strong>– André Carvalho</strong>
+        </div>
 
-  <div class="depoimento">
-    <p>“Fui indicado por um amigo e agora sou cliente fiel. Atendimento 10/10.”</p>
-    <strong>– Matheus Lima</strong>
-  </div>
-</section>
+        <div class="depoimento">
+          <p>
+            “Eles respeitam o horário marcado, são rápidos e caprichosos. Nota
+            mil!”
+          </p>
+          <strong>– Tiago Rocha</strong>
+        </div>
 
+        <div class="depoimento">
+          <p>
+            “Fui indicado por um amigo e agora sou cliente fiel. Atendimento
+            10/10.”
+          </p>
+          <strong>– Matheus Lima</strong>
+        </div>
+      </section>
 
-<section>
-      <div>
-        <a href="https://wa.me/5563999999999" target="_blank" class="whatsapp-btn">
-      <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" />
-       </a>
-      </div>
-</section>
+      <section>
+        <!-- Botão Flutuante WhatsApp -->
+        <div
+          class="chat-toggle"
+          id="abrirChat"
+          style="
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: #25d366;
+            color: white;
+            padding: 15px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 24px;
+            z-index: 1000;
+          "
+        >
+          💬
+        </div>
+
+        <!-- Caixa do Chatbot -->
+        <div
+          class="chatbot-container"
+          id="chatContainer"
+          style="
+            display: none;
+            position: fixed;
+            bottom: 80px;
+            right: 20px;
+            width: 300px;
+            max-height: 500px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            z-index: 999;
+          "
+        >
+          <div
+            class="chat-header"
+            style="
+              color: white;
+              padding: 10px;
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+            "
+          >
+            <span>🤖 Atendimento Virtual</span>
+            <span id="fecharChat" style="cursor: pointer">✖</span>
+          </div>
+
+          <div
+            class="chat-messages"
+            id="chatMessages"
+            style="
+              padding: 10px;
+              height: 250px;
+              overflow-y: auto;
+              font-family: sans-serif;
+              font-size: 14px;
+            "
+          >
+            <!-- mensagens aparecem aqui -->
+          </div>
+
+          <div
+            class="chat-input"
+            style="display: flex; padding: 10px; border-top: 1px solid #ddd"
+          >
+            <input
+              type="text"
+              id="userInput"
+              placeholder="Digite sua pergunta..."
+              style="flex: 1; padding: 8px"
+            />
+            <button
+              id="enviarMensagem"
+              style="
+                padding: 8px 10px;
+                background: #007bff;
+                color: white;
+                border: none;
+                margin-left: 5px;
+                cursor: pointer;
+              "
+            >
+              Enviar
+            </button>
+          </div>
+
+          <button
+            id="encerrarAtendimento"
+            style="
+              width: 100%;
+              padding: 10px;
+              border: none;
+              background: #ff4d4d;
+              color: white;
+              cursor: pointer;
+              border-bottom-left-radius: 10px;
+              border-bottom-right-radius: 10px;
+            "
+          >
+            Encerrar Atendimento
+          </button>
+        </div>
+      </section>
     </main>
 
     <footer class="rodape">
-  <div class="footer-container">
-    <div class="footer-logo">
-      <h2>Barbearia</h2>
-      <p>Estilo, qualidade e atendimento profissional.</p>
-    </div>
+      <div class="footer-container">
+        <div class="footer-logo">
+          <h2>Barbearia</h2>
+          <p>Estilo, qualidade e atendimento profissional.</p>
+        </div>
 
-    <div class="footer-links">
-      <h3>Links Rápidos</h3>
-      <ul>
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Serviços</a></li>
-        <li><a href="#">Agendamento</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </div>
+        <div class="footer-links">
+          <h3>Links Rápidos</h3>
+          <ul>
+            <li><a href="#">Início</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Agendamento</a></li>
+            <li><a href="#">Contato</a></li>
+          </ul>
+        </div>
 
-    <div class="footer-social">
-      <h3>Redes Sociais</h3>
-      <div class="icons">
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" /></a>
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram" /></a>
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" /></a>
+        <div class="footer-social">
+          <h3>Redes Sociais</h3>
+          <div class="icons">
+            <a href="#"
+              ><img
+                src="https://cdn-icons-png.flaticon.com/512/733/733547.png"
+                alt="Facebook"
+            /></a>
+            <a href="#"
+              ><img
+                src="https://cdn-icons-png.flaticon.com/512/733/733558.png"
+                alt="Instagram"
+            /></a>
+            <a href="#"
+              ><img
+                src="https://cdn-icons-png.flaticon.com/512/733/733585.png"
+                alt="WhatsApp"
+            /></a>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
 
-  <div class="footer-bottom">
-    <p>&copy; 2025 Barbearia Reido Corte. Todos os direitos reservados.</p>
-  </div>
-</footer>
+      <div class="footer-bottom">
+        <p>&copy; 2025 Barbearia Reido Corte. Todos os direitos reservados.</p>
+      </div>
+    </footer>
 
     <script type="module" src="js/cliente.js"></script>
+    <script tipe="module" src="js/chat.js"></script>
   </body>
 </html>
