--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
           loop
           playsinline
         >
-          <source src="./assets/video.mp4" type="video/mp4" />
-          Seu navegador não suporta vídeos HTML5.
-        </video>
+          <video width="100%" height="250" controls, muted, loop, playsinline>
+            <source src="./assets/video.mp4" type="video/mp4" />
+          </video>
+
         <div class="video-overlay">
           <h1>Barbearia Rei do Corte</h1>
           <p>Transforme seu visual com estilo e qualidade.</p>
