atualização no video

--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
           loop
           playsinline
         >
-          <video width="100%" height="250" controls, muted, loop, playsinline>
-            <source src="./assets/video.mp4" type="video/mp4" />
-          </video>
-
+          <source src="./assets/video (video-converter.com).mp4" type="video/mp4" />
+          Seu navegador não suporta vídeos HTML5.
+        </video>
         <div class="video-overlay">
           <h1>Barbearia Rei do Corte</h1>
           <p>Transforme seu visual com estilo e qualidade.</p>
