--- a/barbearia/admin.html
+++ b/barbearia/admin.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./css/admin.css" />
+    <link rel="stylesheet" href="../css/admin.css" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
@@ -25,13 +25,12 @@
   </head>
   <body>
     <header class="cabecalho">
-   <img  class="logo" src="./assets/logo.png" alt="">
+   <img  class="logo" src="../assets/logo.png" alt="">
       <button class="menu-toggle" id="menu-toggle">&#9776;</button>
       <nav class="menu" id="menu">
-        <a href="./barbeiros.html">Agendamentos por Barbeiro</a>
         <a href="#" id="abrirCadastro">Cadastro de Barbeiro</a>
         <a href="#" id="abrirLista">Barbeiros Cadastrados</a>
-        <a href="arquivos.html">Agendamentos Arquivados</a>
+        <a href="./arquivos.html">Agendamentos Arquivados</a>
       </nav>
     </header>
 
@@ -41,7 +40,6 @@
  <h2>Painel do Administrador</h2>
   <p>
     Bem-vindo ao painel de administração da barbearia. Aqui você pode visualizar, filtrar, gerenciar e arquivar os agendamentos realizados.
-    Utilize os filtros acima para localizar rapidamente um cliente, barbeiro ou agendamento por data. 
     Mantenha o controle total dos serviços prestados e otimize o atendimento da sua equipe.
   </p>
   </div>
@@ -125,7 +123,7 @@
   </div>
 </footer>
 
-    <script type="module" src="js/admin.js"></script>
+    <script type="module" src="../js/admin.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const toggle = document.getElementById("menu-toggle");
