--- a/barbearia/arquivos.html
+++ b/barbearia/arquivos.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <title>Agendamentos Arquivados</title>
-    <link rel="stylesheet" href="css/arquivo.css" />
+    <link rel="stylesheet" href="../css/arquivo.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"type="module"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js" type="module" ></script>
-    <script type="module" src="js/arquivo.js"></script>
+    <script type="module" src="../js/arquivo.js"></script>
   </head>
   <body>
     <header>
 <div class="container">
           <ul>
-            <li><a href="admin.html">Voltar</a></li>
+            <li><a href="./admin.html">Voltar</a></li>
           </ul>
           <h1>Agendamentos Arquivados</h1>
         </div>
