--- a/barbearia/barbeiros.html
+++ b/barbearia/barbeiros.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Seu Nome"> 
     <meta name="robots" content="index, follow">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/admin.css">
+    <link rel="stylesheet" href="../css/admin.css">
     <title>Agendamentos por Barbeiro</title>
 </head>
 <body>
@@ -61,6 +61,6 @@
     <p>&copy; 2025 Barbearia. Todos os direitos reservados.</p>
   </div>
 </footer>
-    <script type="module" src="./js/barbeiros.js"></script>
+    <script type="module" src="../js/barbeiros.js"></script>
 </body>
 </html>
